2020-01-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Message threading cleanup

	Remove duplicate idle handler, and make
	libbalsa_mailbox_local_set_threading_info() private.

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_init),
	(libbalsa_mailbox_local_finalize),
	(libbalsa_mailbox_local_close_mailbox): drop thread_id, and use
	set_threading_id instead;
	(message_match_real): add test for msgno > 0;
	(lbm_local_set_threading_info): renamed from
	libbalsa_mailbox_local_set_threading_info now that it is
	private;
	(libbalsa_mailbox_local_set_threading): use the new name;
	(lbm_local_prepare_msgno): declare it void; no gboolean return
	value is needed;
	(libbalsa_mailbox_local_prepare_threading): drop the idle
	handler;
	* libbalsa/mailbox_local.h:
	libbalsa_mailbox_local_set_threading_info() is now private;
	* libbalsa/mailbox_mbox.c (parse_mailbox): do not call it.

2020-01-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Fetch threading info when needed

	Add missing_info and missing_parent members to ThreadingInfo,
	and use them to decide when complete rethreading is needed.

	* libbalsa/mailbox_local.c (lbml_info_setup): initialize them to
	FALSE;
	(lbml_thread_messages): if both are TRUE, we must fetch
	threading info for all messages, in case the parent is present
	but has not been seen;
	(lbml_set_parent): set missing_info if the info is missing;
	(lbml_find_parent): set missing_paarent if the message has
	references but no parent was found.

2020-01-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Move messages-loaded from LibBalsaMailbox to LibBalsaMailboxLocal

	* libbalsa/mailbox.c (libbalsa_mailbox_close),
	(libbalsa_mailbox_set_has_unread_messages): drop the getter and
	setter;
	* libbalsa/mailbox.h: ditto;
	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_close_mailbox),
	(lbml_load_messages_idle_cb),
	(libbalsa_mailbox_local_load_messages),
	(lbml_set_threading_idle_cb),